# freetote

./: .gitignore  Cargo.toml  README.md
config/: default.yml
migrations/2020-04-21-013423_create_bets/: down.sql  up.sql
migrations/2020-04-21-013423_create_bets/src/: schema.rs
migrations/2020-04-21-034639_create_user/: down.sql  up.sql
migrations/2020-04-21-040842_outcomes/: down.sql  up.sql
migrations/2020-04-21-043225_create_wagers/: down.sql  up.sql
migrations/2020-06-08-014930_add_not_null/: down.sql  up.sql
migrations/2020-06-18-063231_create_winners/: down.sql  up.sql
src/: bets.rs  db.rs  main.rs  models.rs  outcomes.rs  schema.rs  settings.rs  users.rs  winners.rs
