[package]
name = "freetote"
version = "0.1.0"
authors = ["David Taylor <dmtaylor2011@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.9"
serde = "1.0.8"
serde_derive = "1.0.8"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.0.0", features = ["postgres"] }
